fixed LinkedIn icon alignment

--- a/css/unicons.css
+++ b/css/unicons.css
@@ -1056,3 +1056,4 @@
 .uil-yen:before { content: '\ebe6'; } /* '' */
 .uil-youtube-alt:before { content: '\ebe7'; } /* '' */
 .uil-youtube:before { content: '\ebe8'; } /* '' */
+.uil-linkedin { text-align: center; }
